--- a/DerpGame/DerpGame.csproj
+++ b/DerpGame/DerpGame.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controller\DerpGame.cs" />
+    <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controller\Program.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="View\Animation.cs" />
